@@ -9,6 +9,16 @@ tip (development version)
   - Remove stray Routes import. (Other conditional Routes imports remain for
     backward compatibility; see module docstring.)
 
+* webhelpers.pylonslib.minify:
+
+  - Remove _jsmin module due to licensing issues. Details are in
+    webhelpers/pylonslib/_jsmin.py .  You can install the "jsmin" package in
+    PyPI (which has the same license), and the helper will use it. If that
+    package is installed, the helper will use it.  Otherwise the helper will
+    emit a warning and leave the Javascript unchanged. CSS minification is not
+    affected.
+
+
 1.0 (2010-06-01)
 -----------------
 
